--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "date-fns": "^2.0.0-beta.5",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.11.13",
     "multer": "^1.4.2",
     "nodemon": "^2.0.7",
     "pg": "^8.5.1",
